AssignmentGit/force-app/main/default/objects/Car_Inventory__c/fields/Featured1__c.field-meta.xml
<CustomField>
    <fullName>Featured1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Featured</label>
    <type>Checkbox</type>
</CustomField>