AssignmentGit/force-app/main/default/objects/Car_Inventory__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Model</label>
    <length>50</length>
    <type>Text</type>
</CustomField>