AssignmentGit/force-app/main/default/objects/Car_Inventory__c/fields/Sedan_Color__c.field-meta.xml
<CustomField>
    <fullName>Sedan_Color__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sedan Color</label>
    <length>50</length>
    <type>Text</type>
</CustomField>