AssignmentGit/force-app/main/default/objects/Car_Inventory__c/fields/Sedan_Transmission_Type__c.field-meta.xml
<CustomField>
    <fullName>Sedan_Transmission_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sedan Transmission Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>