AssignmentGit/force-app/main/default/objects/Car_Inventory__c/fields/SUV_Capacity__c.field-meta.xml
<CustomField>
    <fullName>SUV_Capacity__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SUV Capacity</label>
    <length>50</length>
    <type>Text</type>
</CustomField>