AssignmentGit/force-app/main/default/objects/Car_Inventory__c/fields/SUV_Cargo_Space__c.field-meta.xml
<CustomField>
    <fullName>SUV_Cargo_Space__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SUV Cargo Space</label>
    <length>50</length>
    <type>Text</type>
</CustomField>