AssignmentGit/force-app/main/default/objects/Car_Inventory__c/recordTypes/SUV.recordType-meta.xml
<RecordType>
    <fullName>SUV</fullName>
    <active>true</active>
    <label>SUV</label>
</RecordType>