AssignmentGit/force-app/main/default/objects/Car_Inventory__c/listViews/Sedan.listView-meta.xml
<ListView>
    <fullName>Sedan</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Make__c</field>
        <operation>equals</operation>
        <value>TATA</value>
    </filters>
    <filters>
        <field>Model__c</field>
        <operation>equals</operation>
        <value>2020</value>
    </filters>
    <filters>
        <field>Sedan_Transmission_Type__c</field>
        <operation>equals</operation>
        <value>Automatic</value>
    </filters>
    <filters>
        <field>Price__c</field>
        <operation>equals</operation>
        <value>200000</value>
    </filters>
    <label>Sedan</label>
</ListView>