AssignmentGit/force-app/main/default/objects/Car_Inventory__c/listViews/SUV.listView-meta.xml
<ListView>
    <fullName>SUV</fullName>
    <booleanFilter>1 AND 2 AND 3</booleanFilter>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Make__c</field>
        <operation>equals</operation>
        <value>BMW</value>
    </filters>
    <filters>
        <field>Model__c</field>
        <operation>equals</operation>
        <value>2021</value>
    </filters>
    <filters>
        <field>Year__c</field>
        <operation>equals</operation>
        <value>2018</value>
    </filters>
    <label>SUV</label>
</ListView>